[gd_scene load_steps=24 format=3 uid="uid://davx6xri0n0vt"]

[ext_resource type="Script" uid="uid://bt47480nh31yn" path="res://dot gds/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cqexju0dcbsij" path="res://dot gds/PlayerMovement.gd" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://chx8k2542vhd2" path="res://dot gds/PlayerCombat.gd" id="3_6t5aa"]
[ext_resource type="ArrayMesh" uid="uid://dpkhctk1q0bpg" path="res://3d Models/Sword/broadsword.obj" id="4_fkybt"]
[ext_resource type="ArrayMesh" uid="uid://dagubfxbsoacu" path="res://3d Models/Bow/bow_01.obj" id="5_x3wgy"]
[ext_resource type="Script" uid="uid://dq5lkmafnvuay" path="res://dot gds/PlayerHealth.gd" id="7_3smsa"]
[ext_resource type="Script" uid="uid://bl4cu5bh7eb27" path="res://dot gds/PlayerProgression.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://dbv3aogrn67ce" path="res://dot gds/PlayerInventory.gd" id="8_f1ek2"]
[ext_resource type="Script" uid="uid://chb3wyyytaqlj" path="res://dot gds/PlayerStats.gd" id="9_tx1dd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6t5aa"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vgqql"]
radius = 0.0
height = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3pqv"]

[sub_resource type="CylinderMesh" id="CylinderMesh_fkybt"]
top_radius = 0.025
bottom_radius = 0.025
height = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_fkybt"]
size = Vector3(0.2, 0.12, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_x3wgy"]
size = Vector3(0.2, 0.12, 0.2)

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "Bow"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHandAnchor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.426209, -0.2, -0.0293823, 0.2, 1, 0.295064, -0.2, -0.880179, 0.25, 1, 0.295064, -0.2, -0.922781, 0.3, 1, 0.295064, -0.256661, -0.984159, 0.5, 1, 0.426209, -0.2, -0.0293823)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHandAnchor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.44, -0.2, 0, 0.20397, 1, 0.236044, -0.2, -0.603911, 0.25, 1, 0.236044, -0.2, -0.323888, 0.3, 1, 0.236044, -0.0707018, 0.0244834, 0.5, 1, -0.44, -0.2, 0)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponAttachPoint/BowNode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.2, 1, 0, -0.152459, -0.831546, 0.25, 1, 0, -0.152459, -0.869495, 0.3, 1, 0.0467828, -0.152459, -0.952966, 0.5, 1, 0, 0, 0)
tracks/3/type = "scale_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftHandAnchor")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.20397, 1, 1, 1, 1, 0.25, 1, 1, 1, 1, 0.3, 1, 1, 1, 1, 0.5, 1, 1, 1, 1)
tracks/4/type = "scale_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightHandAnchor")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 1, 1, 1, 0.25, 1, 1, 1, 1, 0.3, 1, 1, 1, 1, 0.5, 1, 1, 1, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WeaponAttachPoint/BowNode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 1, 1, 1, 0.25, 1, 1, 1, 1, 0.3, 1, 1, 1, 1, 0.5, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHandAnchor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.44, -0.2, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponAttachPoint/SwordNode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.0766866, 0.0476032, -0.0139694)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftHandAnchor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -0.44, -0.2, 0)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponAttachPoint/BowNode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "punch"
length = 0.3
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHandAnchor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.44, -0.2, 0, 0.1, 1, 0.44, -0.2, -1, 0.3, 1, 0.44, -0.2, 0)

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "sword_slash"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponAttachPoint/SwordNode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0766866, 0.0476032, -0.0139694, 0.1, 1, -0.0766866, -0.109188, 0.223207, 0.2, 1, -0.0766867, -0.109188, -0.358514, 0.237975, 1, -0.0766867, -0.448031, -0.325128, 0.256575, 1, -0.0766867, -0.634076, -0.308775, 0.266667, 1, -0.0766867, -0.58309, -0.299904, 0.5, 1, -0.0766866, 0.0476032, -0.0139694)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponAttachPoint/SwordNode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0.707107, 0, 0.707107, 0.1, 1, 0.213578, 0.67408, 0.213578, 0.67408, 0.2, 1, -0.364117, 0.732434, -0.256096, 0.515145, 0.266667, 1, 0.603803, -0.420499, 0.652092, -0.182695, 0.5, 1, 0, 0.707107, 0, 0.707107)
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHandAnchor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.44, -0.2, 0, 0.101749, 1, 0.284252, -0.2, 0.197986, 0.2, 1, 0.330743, -0.243873, -0.343082, 0.266667, 1, -0.316441, -0.243873, -0.269195, 0.5, 1, 0.44, -0.2, 0)
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightHandAnchor")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.101749, 1, 0.0478704, -0.318942, 0.105996, 0.940611, 0.2, 1, 0.155533, 0.415421, 0.0735297, 0.893212, 0.264793, 1, 0.0656986, 0.970525, -0.0623529, 0.22333, 0.266667, 1, 0, 0, 0, 1)
tracks/4/type = "scale_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightHandAnchor")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0.2, 1, 1, 1, 1, 0.264793, 1, 1, 1, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WeaponAttachPoint/SwordNode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.1, 1, 1, 1, 1, 0.2, 1, 1, 1, 1, 0.266667, 1, 1, 1, 1, 0.5, 1, 1, 1, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkybt"]
_data = {
&"Bow": SubResource("Animation_3smsa"),
&"RESET": SubResource("Animation_vgqql"),
&"punch": SubResource("Animation_6t5aa"),
&"sword_slash": SubResource("Animation_x3wgy")
}

[sub_resource type="PrismMesh" id="PrismMesh_6t5aa"]

[sub_resource type="BoxMesh" id="BoxMesh_vgqql"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_6t5aa")
mesh = SubResource("CapsuleMesh_vgqql")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_onrkg")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("SphereShape3D_i3pqv")

[node name="WeaponAttachPoint" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.44, -0.2, 0)

[node name="SwordNode" type="MeshInstance3D" parent="WeaponAttachPoint"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0766866, 0.0476032, -0.0139694)
visible = false
mesh = ExtResource("4_fkybt")

[node name="BowNode" type="MeshInstance3D" parent="WeaponAttachPoint"]
transform = Transform3D(1.19374e-08, -1, 1.94435e-09, -0.0128768, -2.0979e-09, -0.999917, 0.999917, 1.19114e-08, -0.0128768, 0, 0, 0)
visible = false
mesh = ExtResource("5_x3wgy")

[node name="StaffNode" type="MeshInstance3D" parent="WeaponAttachPoint"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.45, 0)
visible = false
mesh = SubResource("CylinderMesh_fkybt")

[node name="RightHandAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.44, -0.2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightHandAnchor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_fkybt")

[node name="LeftHandAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44, -0.2, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftHandAnchor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_x3wgy")

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fkybt")
}

[node name="Front Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(0.47836, 0, 0, 0, 0.0182044, 0.139854, 0, -0.288146, 0.00883559, -0.00549769, 0.449313, -1.88298)
visible = false
mesh = SubResource("PrismMesh_6t5aa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Front Indicator"]
transform = Transform3D(0.262829, 0, 0, 0, 2.54365, 0, 0, 0, 0.85632, 0, -1.1338, 0.0813899)
mesh = SubResource("BoxMesh_vgqql")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_3smsa")

[node name="ProgressionComponent" type="Node" parent="."]
script = ExtResource("8_8erm5")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("3_6t5aa")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_cvnsp")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("2_cvnsp")

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("8_f1ek2")

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("9_tx1dd")
